# dvc_example

./: pyproject.toml
.dvc/: config
src/data/: data_download.py  data_prepare.py
